--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,58 @@
+body, h1, h3, p, div, a, li {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  text-decoration: inherit;
+  font: inherit;
+  text-align: inherit;
+  color: inherit;
+  background: transparent;
+}
+
 body {
-  padding: 50px;
+  padding: 0 50px 50px 20px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
-a {
-  color: #00B7FF;
+#flash-message {
+  text-align: center;
+  height: 30px;
+  margin: 0;
+}
+
+h1 {
+  font-size: 36px;
+  font-weight: bold;
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+h3 {
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.bookmarks {
+  width: 400px;
+  margin: auto;
+}
+
+#bookmark-list {
+  list-style-type: none;
+}
+
+#bookmark-list li {
+  margin: 10px 0;
+}
+
+#bookmark-list a {
+  display: inline-block;
+  width: 300px;
+  text-decoration: none;
+  color: black;
+}
+
+#bm-form {
+  width: 450px;
+  margin: auto;
 }
