--- a/views/index.html
+++ b/views/index.html
@@ -7,11 +7,12 @@
 </div>
 
 <form id="bm-form">
+  <p>Add a new bookmark</p>
   <label for="name">Name</label>
   <input type="text" id="name" name="bookmark[name]">
 
   <label for="url">Url</label>
   <input type="text" id="url" name="bookmark[url]">
 
-  <button id="add-bm">Add Bookmark</button>
+  <button id="add-bm">Add</button>
 </form>
