--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,5 +4,7 @@ html
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
+    block content
+
     include index.html
     script(src='/javascripts/script.js')
